# Quiz-Game

./: MULTIPLE_PARTICIPANTS_GUIDE.md  QUICK_START.md  QUIZ_GAME_SUMMARY.md  README.md  USERNAME_AUTH_CHANGES.md  VISUAL_GUIDE.md  pyproject.toml  setup-mac.sh  setup.ps1  setup.sh  start.ps1  start.sh  test_username_auth.py
backend/: .env.example  pyproject.toml  quiz_questions.json  quiz_state.json  requirements.txt
backend/app/: __init__.py  main.py  models.py  persistence.py  quiz_loader.py  state.py  websocket_manager.py
frontend/: .env.example  COMPONENT_GUIDE.md  index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  api.js  i18n.jsx  index.css  main.jsx  theme.js
frontend/src/components/: ParticipantApp.jsx  PresenterApp.jsx  Scoreboard.jsx
frontend/src/components/ui/: AnswerChart.jsx  Badge.jsx  Button.jsx  Card.jsx  EmptyState.jsx  LanguageSelector.jsx  Skeleton.jsx
frontend/src/hooks/: useMediaQuery.js
